--- a/src/components/Layouts/DefaultLayout/Content/Sort/sort.css
+++ b/src/components/Layouts/DefaultLayout/Content/Sort/sort.css
@@ -1,4 +1,4 @@
-.containerFluid .sectionSearch {
+.container .sectionSearch {
     box-shadow: 0px 1px 1px rgb(0 0 0/12%);
     border: 1px solid rgb(201, 201, 201);
     border-radius: 5px;
